chore: rename project

--- a/apps/su-gtd/src/index.html
+++ b/apps/su-gtd/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <angular-nest-nx-root></angular-nest-nx-root>
+    <su-gtd-root></su-gtd-root>
   </body>
 </html>
